--- a/Vidley/Vidley.csproj
+++ b/Vidley/Vidley.csproj
@@ -189,18 +189,76 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808021509523_InitialModel.cs" />
+    <Compile Include="Migrations\201808021509523_InitialModel.Designer.cs">
+      <DependentUpon>201808021509523_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808021513329_InitialModel1.cs" />
+    <Compile Include="Migrations\201808021513329_InitialModel1.Designer.cs">
+      <DependentUpon>201808021513329_InitialModel1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808021516551_addissubscribedtocustomer.cs" />
+    <Compile Include="Migrations\201808021516551_addissubscribedtocustomer.Designer.cs">
+      <DependentUpon>201808021516551_addissubscribedtocustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808021525106_AddMemberShipType.cs" />
+    <Compile Include="Migrations\201808021525106_AddMemberShipType.Designer.cs">
+      <DependentUpon>201808021525106_AddMemberShipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808021529133_PopulateMemberShipTypes.cs" />
+    <Compile Include="Migrations\201808021529133_PopulateMemberShipTypes.Designer.cs">
+      <DependentUpon>201808021529133_PopulateMemberShipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808021535190_AddAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201808021535190_AddAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201808021535190_AddAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808021604201_AddNameColumnToMemberShipType.cs" />
+    <Compile Include="Migrations\201808021604201_AddNameColumnToMemberShipType.Designer.cs">
+      <DependentUpon>201808021604201_AddNameColumnToMemberShipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808021613002_AddBirthDateColumnToCustomer.cs" />
+    <Compile Include="Migrations\201808021613002_AddBirthDateColumnToCustomer.Designer.cs">
+      <DependentUpon>201808021613002_AddBirthDateColumnToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808021624126_UpdateBirthDateToNullableInCustomer.cs" />
+    <Compile Include="Migrations\201808021624126_UpdateBirthDateToNullableInCustomer.Designer.cs">
+      <DependentUpon>201808021624126_UpdateBirthDateToNullableInCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808030106492_AddAdditionalFieldsToMoviesTable.cs" />
+    <Compile Include="Migrations\201808030106492_AddAdditionalFieldsToMoviesTable.Designer.cs">
+      <DependentUpon>201808030106492_AddAdditionalFieldsToMoviesTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808030110536_PopulateGenreTable.cs" />
+    <Compile Include="Migrations\201808030110536_PopulateGenreTable.Designer.cs">
+      <DependentUpon>201808030110536_PopulateGenreTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808040221409_AddAnnotationsToMovieModel.cs" />
+    <Compile Include="Migrations\201808040221409_AddAnnotationsToMovieModel.Designer.cs">
+      <DependentUpon>201808040221409_AddAnnotationsToMovieModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MemberShipType.cs" />
+    <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\CustomerFormViewModel.cs" />
+    <Compile Include="ViewModels\MovieFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-lumen.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -257,6 +315,13 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Customers\Index.cshtml" />
+    <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
+    <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -275,6 +340,44 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201808021509523_InitialModel.resx">
+      <DependentUpon>201808021509523_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808021513329_InitialModel1.resx">
+      <DependentUpon>201808021513329_InitialModel1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808021516551_addissubscribedtocustomer.resx">
+      <DependentUpon>201808021516551_addissubscribedtocustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808021525106_AddMemberShipType.resx">
+      <DependentUpon>201808021525106_AddMemberShipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808021529133_PopulateMemberShipTypes.resx">
+      <DependentUpon>201808021529133_PopulateMemberShipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808021535190_AddAnnotationsToCustomerName.resx">
+      <DependentUpon>201808021535190_AddAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808021604201_AddNameColumnToMemberShipType.resx">
+      <DependentUpon>201808021604201_AddNameColumnToMemberShipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808021613002_AddBirthDateColumnToCustomer.resx">
+      <DependentUpon>201808021613002_AddBirthDateColumnToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808021624126_UpdateBirthDateToNullableInCustomer.resx">
+      <DependentUpon>201808021624126_UpdateBirthDateToNullableInCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808030106492_AddAdditionalFieldsToMoviesTable.resx">
+      <DependentUpon>201808030106492_AddAdditionalFieldsToMoviesTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808030110536_PopulateGenreTable.resx">
+      <DependentUpon>201808030110536_PopulateGenreTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808040221409_AddAnnotationsToMovieModel.resx">
+      <DependentUpon>201808040221409_AddAnnotationsToMovieModel.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
