--- a/Vidley/Vidley.csproj
+++ b/Vidley/Vidley.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Dtos\CustomerDto.cs" />
+    <Compile Include="Dtos\GenreDto.cs" />
     <Compile Include="Dtos\MemberShipTypeDto.cs" />
     <Compile Include="Dtos\MovieDto.cs" />
     <Compile Include="Global.asax.cs">
@@ -262,6 +263,10 @@
     <Compile Include="Migrations\201808040221409_AddAnnotationsToMovieModel.cs" />
     <Compile Include="Migrations\201808040221409_AddAnnotationsToMovieModel.Designer.cs">
       <DependentUpon>201808040221409_AddAnnotationsToMovieModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808121423550_SeedUsers.cs" />
+    <Compile Include="Migrations\201808121423550_SeedUsers.Designer.cs">
+      <DependentUpon>201808121423550_SeedUsers.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -636,6 +641,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808040221409_AddAnnotationsToMovieModel.resx">
       <DependentUpon>201808040221409_AddAnnotationsToMovieModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808121423550_SeedUsers.resx">
+      <DependentUpon>201808121423550_SeedUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
