--- a/Vidley/Vidley.csproj
+++ b/Vidley/Vidley.csproj
@@ -268,6 +268,10 @@
     <Compile Include="Migrations\201808121423550_SeedUsers.Designer.cs">
       <DependentUpon>201808121423550_SeedUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808121528462_AddDrivingLicenseToApplicationUser.cs" />
+    <Compile Include="Migrations\201808121528462_AddDrivingLicenseToApplicationUser.Designer.cs">
+      <DependentUpon>201808121528462_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -277,6 +281,7 @@
     <Compile Include="Models\MemberShipType.cs" />
     <Compile Include="Models\Min18YearsIfMember.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\RoleName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CustomerFormViewModel.cs" />
@@ -645,6 +650,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808121423550_SeedUsers.resx">
       <DependentUpon>201808121423550_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808121528462_AddDrivingLicenseToApplicationUser.resx">
+      <DependentUpon>201808121528462_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
